[gd_scene load_steps=8 format=3 uid="uid://bvwop03r8v6vv"]

[ext_resource type="Script" path="res://SCRIPTS/level_scripts/end_game_screen.gd" id="1_2eemu"]
[ext_resource type="Texture2D" uid="uid://dhm8u67fwe0hs" path="res://ART/objects/Planet.png" id="1_4u3uh"]
[ext_resource type="Texture2D" uid="uid://cgif0r2275ntn" path="res://ART/icons_ui/StarsBackground.png" id="1_ahoyu"]
[ext_resource type="Texture2D" uid="uid://bh6twmfm5x7e4" path="res://ART/characters/Spaceship.png" id="1_ay6ft"]
[ext_resource type="Shader" path="res://RESOURCES/SHADERS/star_glow_shader.gdshader" id="1_qn7yu"]
[ext_resource type="Theme" uid="uid://cxwwvxki6fpue" path="res://RESOURCES/UI_RESOURCES/main_theme.tres" id="6_j8meo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uxfx5"]
shader = ExtResource("1_qn7yu")
shader_parameter/speed = 1.0
shader_parameter/intensity = 0.02
shader_parameter/randomness = 2.0
shader_parameter/active = false

[node name="EndGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2eemu")

[node name="Space" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_uxfx5")
texture = ExtResource("1_ahoyu")
centered = false
metadata/_edit_lock_ = true

[node name="Planet" type="Sprite2D" parent="."]
position = Vector2(640, -180)
scale = Vector2(2, 2)
texture = ExtResource("1_4u3uh")

[node name="Ship" type="Sprite2D" parent="."]
position = Vector2(640, 430)
scale = Vector2(2, 2)
texture = ExtResource("1_ay6ft")
metadata/_edit_lock_ = true

[node name="YouArrived" type="Label" parent="."]
layout_mode = 0
offset_left = -410.0
offset_top = 223.0
offset_right = -186.0
offset_bottom = 280.0
theme = ExtResource("6_j8meo")
text = "You arrived !"

[node name="Thanks" type="Label" parent="."]
layout_mode = 0
offset_left = -410.0
offset_top = 396.0
offset_right = -59.0
offset_bottom = 453.0
theme = ExtResource("6_j8meo")
text = "Thanks for playing !"

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(430, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 45.0
offset_top = -32.5
offset_right = 475.0
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme = ExtResource("6_j8meo")
text = "Return to Title Screen"

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
